# src/routes/api/v1/productRoutes/index.js
@@ -10,9 +10,9 @@ routes.delete('/:store_id/:product_id', productController.deleteProduct)
 
 routes.get('/', productController.getProducts)
 routes.get('/:product_id/product', productController.getProductById)
-routes.post('/color/color', productController.createColor)
-routes.post('/size/size', productController.createSize)
-routes.get('/size/size', productController.getSize)
-routes.get('/color/color', productController.getColor)
+routes.post('/color', productController.createColor)
+routes.post('/size', productController.createSize)
+routes.get('/size', productController.getSize)
+routes.get('/colors', productController.getColor)
 
 module.exports = routes
